# internal-file-registry-service

./: .description.md  .pre-commit-config.yaml  .static_files  Dockerfile  README.md  config_schema.json  example_config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .dev_config.yaml  .internal_file_registry_service.yaml  Dockerfile  dev_install  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: dev_cd.yaml  unit_and_int_tests.yaml
.pyproject_generation/: pyproject_custom.toml
.readme_generation/: description.md
.template/: static_files_ignore.txt
db_migration/alembic/: env.py
db_migration/alembic/versions/: 20211117_141549_1bbec6d05277_initial_revision.py  20211117_152725_67f504917d50_initialize_with_fileobjects_table.py  20211207_133634_3b0661f98079_non_unique_grouping_label.py  20211208_171058_5a017d66caf4_remove_size.py  20211209_145916_826d7777c67c_renamed_external_id_to_file_id.py  20220114_163228_6a036f1cb50c_added_additional_file_attributes.py
ifrs/: __init__.py  __main__.py  config.py  container.py  main.py
ifrs/adapters/inbound/: event_sub.py
ifrs/adapters/outbound/: dao.py  event_pub.py  s3.py
ifrs/core/: __init__.py  content_copy.py  file_registry.py  interfaces.py  main.py  models.py
ifrs/dao/: db.py  db_models.py
ifrs/ports/inbound/: file_registry.py
ifrs/ports/outbound/: dao.py  event_broadcast.py  event_pub.py  storage.py
internal_file_registry_service/: __init__.py  __main__.py  config.py  models.py
internal_file_registry_service/core/: __init__.py  main.py
internal_file_registry_service/dao/: __init__.py  db.py  db_models.py
internal_file_registry_service/pubsub/: __init__.py  pub.py  sub.py
internal_file_registry_service/pubsub/schemas/: __init__.py  read_schemas.py
lock/: requirements-dev.txt  requirements.txt
scripts/: openapi_from_app.py
src/ifrs/: __init__.py  __main__.py  config.py  container.py  inject.py  main.py
src/ifrs/adapters/inbound/: event_sub.py
src/ifrs/adapters/outbound/: dao.py  event_pub.py  s3.py
src/ifrs/core/: content_copy.py  file_registry.py  interfaces.py  models.py
src/ifrs/ports/inbound/: content_copy.py  file_registry.py
src/ifrs/ports/outbound/: event_pub.py  storage.py
tests/: test_core.py  test_edge_cases.py  test_typical_journey.py
tests/fixtures/: __init__.py  config.py  data.py  example_data.py  joint.py  module_scope_fixtures.py  psql.py  pubsub.py  s3.py  state.py  storage.py  test_config.yaml  utils.py
tests/integration/: test_api.py  test_pubsub.py  test_pubsub_.py
tests/integration/fixtures/: utils.py
tests/unit/: test_core.py  test_core_greeting.py  test_dummy.py  test_psql_db_dao.py
tests/unit/fixtures/: __init__.py  config.py  greetings.py  main.py  psql_dao.py  pubsub.py  s3.py  storage.py
