[build-system]
requires = ["setuptools>=67.7.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ifrs"
version = "1.0.0"
description = "Internal-File-Registry-Service - This service acts as a registry for the internal location and representation of files."
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
dependencies = [
    "ghga-event-schemas==2.0.0",
    "ghga-service-commons>=1.1.0",
    "hexkit[mongodb,s3,akafka]>=0.11.0",
]

[project.license]
text = "Apache 2.0"

[project.urls]
Repository = "https://github.com/ghga-de/internal-file-registry-service"

[project.scripts]
ifrs = "ifrs.__main__:run_forever"

[tool.setuptools.packages.find]
where = ["src"]
