# Copyright 2021 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = internal_file_registry_service
version = attr: internal_file_registry_service.__version__
description = Internal-File-Registry-Service - This service acts as a registry for the internal location and representation of files.
url = https://github.com/ghga-de/microservice-repository-template
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ghga-service-chassis-lib[pubsub,postgresql,s3]==0.5.0
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    internal-file-registry-service = internal_file_registry_service.__main__:run

[options.extras_require]
dev =
    pytest
    pytest-cov
    mypy
    pylint
    black
    isort
    bandit
    flake8
    pre-commit
    requests
    mkdocs
    mkdocs-material
    mkdocstrings
    testcontainers
db_migration =
    alembic==1.6.5
all =
    %(dev)s
    %(db_migration)s


[options.packages.find]
exclude = tests
